--- a/分类.html
+++ b/分类.html
@@ -15,7 +15,7 @@
 <div class="module-item">
 <div class="module-item-cover">
 <div class="module-item-pic">
-<a href="https://pastebin.com/raw/DagT1AFm" title="哆啦A夢剧场版.大雄的人鱼大海战" text="粤语版">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E5%93%86%E5%95%A6A%E5%A4%A2%E5%89%A7%E5%9C%BA%E7%89%88.%E5%A4%A7%E9%9B%84%E7%9A%84%E4%BA%BA%E9%B1%BC%E5%A4%A7%E6%B5%B7%E6%88%98.html" title="哆啦A夢剧场版.大雄的人鱼大海战" text="粤语版">
 <i class="icon-play"></i>
 </a>
 <img class="lazy lazyloaded" data-src="https://upload.wikimedia.org/wikipedia/en/7/79/Doraemon_Nobita_Great_Battle_of_the_Mermaid_King.jpg" src="https://upload.wikimedia.org/wikipedia/en/7/79/Doraemon_Nobita_Great_Battle_of_the_Mermaid_King.jpg" alt="哆啦A夢剧场版.大雄的人鱼大海战">
@@ -26,12 +26,12 @@
 </div>
 <div class="module-item-content">
 <div class="module-item-style video-name">
-<a href="https://pastebin.com/raw/DagT1AFm" title="哆啦A夢剧场版.大雄的人鱼大海战">哆啦A夢剧场版.大雄的人鱼大海战</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E5%93%86%E5%95%A6A%E5%A4%A2%E5%89%A7%E5%9C%BA%E7%89%88.%E5%A4%A7%E9%9B%84%E7%9A%84%E4%BA%BA%E9%B1%BC%E5%A4%A7%E6%B5%B7%E6%88%98.html" title="哆啦A夢剧场版.大雄的人鱼大海战">哆啦A夢剧场版.大雄的人鱼大海战</a>
 </div>			
 </div>
 </div>
 <div class="module-item-titlebox">
-<a href="https://pastebin.com/raw/DagT1AFm" class="module-item-title" title="哆啦A夢剧场版.大雄的人鱼大海战">哆啦A夢剧场版.大雄的人鱼大海战</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E5%93%86%E5%95%A6A%E5%A4%A2%E5%89%A7%E5%9C%BA%E7%89%88.%E5%A4%A7%E9%9B%84%E7%9A%84%E4%BA%BA%E9%B1%BC%E5%A4%A7%E6%B5%B7%E6%88%98.html" class="module-item-title" title="哆啦A夢剧场版.大雄的人鱼大海战">哆啦A夢剧场版.大雄的人鱼大海战</a>
 </div>
 <div class="module-item-text">粤语版</div>
 </div>
@@ -39,7 +39,7 @@
 <div class="module-item">
 <div class="module-item-cover">
 <div class="module-item-pic">
-<a href="https://pastebin.com/raw/nhv2XmFD" title="麻辣教师GTO" text="粤语版">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/GTO%E9%BA%BB%E8%BE%A3%E6%95%99%E5%B8%88.html" title="麻辣教师GTO" text="粤语版">
 <i class="icon-play"></i>
 </a>
 <img class="lazy lazyloaded" data-src="https://upload.wikimedia.org/wikipedia/en/b/b9/GTO_volume_1.jpg" src="https://upload.wikimedia.org/wikipedia/en/b/b9/GTO_volume_1.jpg" alt="麻辣教师GTO">
@@ -50,12 +50,12 @@
 </div>
 <div class="module-item-content">
 <div class="module-item-style video-name">
-<a href="https://pastebin.com/raw/nhv2XmFD" title="麻辣教师GTO">麻辣教师GTO</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/GTO%E9%BA%BB%E8%BE%A3%E6%95%99%E5%B8%88.html" title="麻辣教师GTO">麻辣教师GTO</a>
 </div>			
 </div>
 </div>
 <div class="module-item-titlebox">
-<a href="https://pastebin.com/raw/nhv2XmFD" class="module-item-title" title="麻辣教师GTO">麻辣教师GTO</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/GTO%E9%BA%BB%E8%BE%A3%E6%95%99%E5%B8%88.html" class="module-item-title" title="麻辣教师GTO">麻辣教师GTO</a>
 </div>
 <div class="module-item-text">粤语版</div>
 </div>
