--- a/分类.html
+++ b/分类.html
@@ -63,7 +63,7 @@
 <div class="module-item">
 <div class="module-item-cover">
 <div class="module-item-pic">
-<a href="https://pastebin.com/raw/nhv2XmFD" title="游戏王" text="粤语版">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E6%B8%B8%E6%88%8F%E7%8E%8B.html" title="游戏王" text="粤语版">
 <i class="icon-play"></i>
 </a>
 <img class="lazy lazyloaded" data-src="https://img1.doubanio.com/view/photo/l/public/p2494874707.webp" src="https://img1.doubanio.com/view/photo/l/public/p2494874707.webp" alt="游戏王">
@@ -74,12 +74,12 @@
 </div>
 <div class="module-item-content">
 <div class="module-item-style video-name">
-<a href="https://pastebin.com/raw/nhv2XmFD" title="游戏王">游戏王</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E6%B8%B8%E6%88%8F%E7%8E%8B.html" title="游戏王">游戏王</a>
 </div>			
 </div>
 </div>
 <div class="module-item-titlebox">
-<a href="https://pastebin.com/raw/nhv2XmFD" class="module-item-title" title="游戏王">游戏王</a>
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E6%B8%B8%E6%88%8F%E7%8E%8B.html" class="module-item-title" title="游戏王">游戏王</a>
 </div>
 <div class="module-item-text">粤语版</div>
 </div>
