--- a/影视/超速摇摇.html
+++ b/影视/超速摇摇.html
@@ -44,6 +44,8 @@
 <a href="https://www.bilibili.com/video/BV1Wx411T7Qv?p=21" title="播放超速摇摇第03集"><span>第21集</span></a>
 <a href="https://www.bilibili.com/video/BV1Wx411T7Qv?p=22" title="播放超速摇摇第03集"><span>第22集</span></a>
 <a href="https://www.acfun.cn/v/ac4738354_3" title="播放超速摇摇第03集"><span>第00集</span></a>
+<a href="https://www.douyin.com/video/7138952835705605390" title="播放超速摇摇第03集"><span>第00集</span></a>
+
 
 
 
