--- a/分类.html
+++ b/分类.html
@@ -107,6 +107,54 @@
 </div>
 <div class="module-item-text">粤语版</div>
 </div>
+//
+<div class="module-item">
+<div class="module-item-cover">
+<div class="module-item-pic">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%BA%8C%E5%AD%A3.html" title="爆丸第二季" text="粤语版">
+<i class="icon-play"></i>
+</a>
+<img class="lazy lazyloaded" data-src="https://bkimg.cdn.bcebos.com/pic/d31b0ef41bd5ad6eddc47fc60e822edbb6fd526696cc?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2U5Mg==,g_7,xp_5,yp_5/format,f_auto" src="https://bkimg.cdn.bcebos.com/pic/d31b0ef41bd5ad6eddc47fc60e822edbb6fd526696cc?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2U5Mg==,g_7,xp_5,yp_5/format,f_auto" alt="爆丸第二季">
+<div class="loading"></div>
+</div>
+<div class="module-item-caption">
+<span>2022</span>	
+</div>
+<div class="module-item-content">
+<div class="module-item-style video-name">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%BA%8C%E5%AD%A3.html" title="爆丸第二季">爆丸第二季</a>
+</div>			
+</div>
+</div>
+<div class="module-item-titlebox">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%BA%8C%E5%AD%A3.html" class="module-item-title" title="爆丸第二季">爆丸第二季</a>
+</div>
+<div class="module-item-text">粤语版</div>
+</div>
+//
+<div class="module-item">
+<div class="module-item-cover">
+<div class="module-item-pic">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%B8%89%E5%AD%A3.html" title="爆丸第三季" text="粤语版">
+<i class="icon-play"></i>
+</a>
+<img class="lazy lazyloaded" data-src="https://bkimg.cdn.bcebos.com/pic/72f082025aafa40f4bfbb2f1242d144f78f0f736b3cc?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2U4MA==,g_7,xp_5,yp_5/format,f_auto" src="https://bkimg.cdn.bcebos.com/pic/72f082025aafa40f4bfbb2f1242d144f78f0f736b3cc?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2U4MA==,g_7,xp_5,yp_5/format,f_auto" alt="爆丸第三季">
+<div class="loading"></div>
+</div>
+<div class="module-item-caption">
+<span>2022</span>	
+</div>
+<div class="module-item-content">
+<div class="module-item-style video-name">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%B8%89%E5%AD%A3.html" title="爆丸第三季">爆丸第三季</a>
+</div>			
+</div>
+</div>
+<div class="module-item-titlebox">
+<a href="https://raw.githubusercontent.com/jameschoy0427/Wrapper/main/%E5%BD%B1%E8%A7%86/%E7%88%86%E4%B8%B8%E7%AC%AC%E4%B8%89%E5%AD%A3.html" class="module-item-title" title="爆丸第三季">爆丸第三季</a>
+</div>
+<div class="module-item-text">粤语版</div>
+</div>
 //结束添加影视
 </div>
 </main>
