--- a/影视/GTO麻辣教师.html
+++ b/影视/GTO麻辣教师.html
@@ -66,6 +66,7 @@
 <a href="https://www.bilibili.com/video/BV1ax411x7D4?p=44" title="播放GTO第03集"><span>第43集</span></a>
 	<a href="http://www.ktwz.cc/play/16667-1-1.html" title="播放GTO第03集"><span>测试</span></a>
 	<a href="https://www.hkanime.com/animal/710x1x1" title="播放GTO第03集"><span>测试2</span></a>
+		<a href="https://h1.hkanime.com/hls-01/viutv/2023/開闊天空！光之美少女/02.mp4/index.m3u8?token=A2gSEfUC0b2GhuDEvYvW8w&expires=1700580103" title="播放GTO第03集"><span>测试3</span></a>
 <a href="https://www.ixigua.com/6855943460415865351?id=6844455644716597774&logTag=4d3ef7253d48de343ed0" title="播放GTO第03集"><span>第00集</span></a>
 
 </div>
