--- a/影视/GTO麻辣教师.html
+++ b/影视/GTO麻辣教师.html
@@ -64,12 +64,9 @@
 <a href="https://www.bilibili.com/video/BV1ax411x7D4?p=42" title="播放GTO第03集"><span>第41集</span></a>
 <a href="https://www.bilibili.com/video/BV1ax411x7D4?p=43" title="播放GTO第03集"><span>第42集</span></a>
 <a href="https://www.bilibili.com/video/BV1ax411x7D4?p=44" title="播放GTO第03集"><span>第43集</span></a>
-	<a href="http://www.ktwz.cc/play/16667-1-1.html" title="播放GTO第03集"><span>测试</span></a>
-	<a href="https://www.hkanime.com/animal/710x1x1" title="播放GTO第03集"><span>测试2</span></a>
-		<a href="https://h1.hkanime.com/hls-01/viutv/2023/%E9%96%8B%E9%97%8A%E5%A4%A9%E7%A9%BA%EF%BC%81%E5%85%89%E4%B9%8B%E7%BE%8E%E5%B0%91%E5%A5%B3/02.mp4/index.m3u8?token=4k9ZJNJyJDDPs0ti9ao3xw&expires=1700580517" title="播放GTO第03集"><span>测试4</span></a>
-	<a href="https://h1.hkanime.com/hls-01/viutv/2023/開闊天空！光之美少女/02.mp4/index.m3u8?token=A2gSEfUC0b2GhuDEvYvW8w&expires=1700580103" title="播放GTO第03集"><span>测试3</span></a>
-<a href="https://www.ixigua.com/6855943460415865351?id=6844455644716597774&logTag=4d3ef7253d48de343ed0" title="播放GTO第03集"><span>第00集</span></a>
-
+	<a href="https://www.ixigua.com/6835870276618551812?logTag=08a41f861a39d7555aa6" title="播放GTO第03集"><span>第43集</span></a>
+	<a href="https://www.ixigua.com/6835870272428442125?logTag=ed182ab1b6b345059888" title="播放GTO第03集"><span>第43集</span></a>
+	
 </div>
 </div>
 </main> 
